UI can create a new savedata

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -23,8 +23,8 @@
 <body>
     <div class="container-fluid px-5 pt-4">
         <div class="row">
-            <div class="col-8 p-2">
-                <h3 style="color: rgb(207, 207, 207);">Cloud SaveData Manager</h1>
+            <div class="col-8 p-2" class="inline">
+                <h3 style="color: rgb(207, 207, 207);">Cloud SaveData Manager <span style="color: chartreuse;">alpha</span></h3>
             </div>
             <div class="col p-2">
                 <a href='#' class="float-right pl-2">Config</a>
